correcting all elements z-index

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 
 html, body {
     margin: 0 80px 0 80px;
+    cursor: default;
 }
 
 body {
@@ -23,6 +24,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center; 
+
 }
 
 .head-txt {
@@ -30,6 +32,7 @@ body {
     margin-top: 10px;
     margin-left: -100px;
     z-index: 1;
+    max-width: fit-content;
   }
 
 header {
@@ -53,7 +56,7 @@ header {
     align-items: center;
     text-align: left;
     margin-top: -80px;
-    z-index: 9;
+    z-index: 7;
     
 }
 
@@ -311,9 +314,11 @@ header {
   border: none;
   box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
   padding-left: 15px;
+  z-index: 1;
 }
 
 .email-box button {
+  cursor: pointer;
   justify-content: center;
   align-items: center;
   margin-left: 15px;
@@ -326,6 +331,7 @@ header {
   align-items: center;
   justify-content: center;
   transition: background-color 0.3s ease;
+  z-index: 5;
 }
 
 .email-box button:hover {
@@ -333,6 +339,7 @@ header {
 }
 
 .email-box button svg {
+  cursor: pointer;
   justify-content: center;
   align-items: center;
   width: 16px;
@@ -363,4 +370,5 @@ header {
   scale: 60%;
   margin-top: 31px;
   left: 395px;
+  z-index: 0;
 }
